--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: '3.9'
       # Runs a single command using the runners shell
       - name: "Creating env"
-        run: python -m pip install setup.py
+        run: python -m pip install -r requirements.txt
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
