--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -17,7 +17,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-and-test:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -32,6 +32,17 @@ jobs:
       - name: "Creating env"
         run: python -m pip install -r requirements.txt
 
+  test:
+    needs: [build]
+    runs-on: ubuntu-latest
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       # Runs a set of commands using the runners shell
       - name: Running tests
-        run: python tests/TestSuite.py
+        run: python TestSuite.py
