--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -28,6 +28,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
       # Runs a single command using the runners shell
       - name: "Creating env"
         run: python -m pip install -r requirements.txt
